add class projects

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <title>Roberto's Page</title>
     </head>
     <body>
-        <p>Hello World!</p>
+        <h1>Roberto Vazquez</h1>
+        <p>Hello to all! This website is intended for Handmade Web 2024.</p>
+        <ul>
+            <li><a href="passion/index.html">passion part 1</a></li>
+            <li><a href="first-website/index.html">first website :D</a></li>
+        </ul>
     </body>
 </html>
