--- a/passion/index.html
+++ b/passion/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>DJAPPLBTTMSMTH</h1>
         <h2>The man, the myth, the legend.</h2>
-        <a href="/">BACK TO HOME</a>
+        <a href="https://bobitoo.github.io/HOMEPAGE/">BACK TO HOME</a>
     </body>
 </html>
