adding css to passion

--- a/passion/index.html
+++ b/passion/index.html
@@ -3,10 +3,50 @@
     <head>
         <title>Passion Project
         </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>DJAPPLBTTMSMTH</h1>
+        <img src="title.png" alt="DJAPPLBTTMSMTH" class="center"> <!--can this be my <h1> ??-->
         <h2>The man, the myth, the legend.</h2>
+        <p>In 2019, life was good. Pandemic was a word some people haven't heard in decades, and people lived in ignorant bliss. It was during this time that young DJ John Apple Bottom Smith (stage name DJAPPLBTTMSMTH) emerged, making a name for himself and paving the way for hundreds of mainstream creatives today. This website is dedicated to the greatness of his first and most likely only album to ever exist, STREET STRUGGLES.</p>
+        <h3>STREET STRUGGLES by DJAPPLBTTMSMTH</h3>
+        <img src="STREETSTRUGGLES.png"
+        width="300px"
+        height="300px"
+        class="centeralbum">
+        <ul class="centertext">
+            <li><audio controls>
+                <source src="singlelayerbrass2.0.wav" type="audio/wav">
+            </audio>01. SINGLELAYERBRASS</li>
+            <li><audio controls>
+                <source src="2. Jesus Is Lord (Trap Remix).wav" type="audio/wav">
+            </audio>02. JESUS IS LORD (TRAP REMIX)</li>
+            <li><audio controls>
+                <source src="3. Everything Wrong With The World.wav" type="audio/wav">
+            </audio>03. EVERYTHING WRONG WITH THE WORLD</li>
+            <li><audio controls>
+                <source src="go2damoon3.0.wav" type="audio/wav">
+            </audio>04. GO2DAMOOON</li>
+            <li><audio controls>
+                <source src="5. Depression Fucking Sucks (co-prod. shvrif).wav" type="audio/wav">
+            </audio>05. DEPRESSION FUCKING SUCKS (CO. PROD SHVRIF)</li>
+            <li><audio controls>
+                <source src="overdue3.0.wav" type="audio/mpeg">
+            </audio>06. OVERDUYE3.0</li>
+            <li><audio controls>
+                <source src="gfu8tar overdrive.wav" type="audio/wav">
+            </audio>07. GFU8TAR OVERDRIVE</li>
+            <li><audio controls>
+                <source src="edmkyoto.wav" type="audio/wav">
+            </audio>08. EDMKYOTO</li>
+            <li><audio controls>
+                <source src="8. The World Is In Your Hands.wav" type="audio/wav">
+            </audio>09. THE WORLD IS IN YOUR HANDS</li>
+            <li><audio controls>
+                <source src="9. Outro.wav" type="audio/wav">
+            </audio>10. OUTRO</li>
+        </ul>
+        <a href="https://soundcloud.com/djapplbttmsmth">SOUNDCLOUD</a>
         <a href="https://bobitoo.github.io/HOMEPAGE/">BACK TO HOME</a>
     </body>
 </html>
