messing around with buttons and javasacript
key note: i have no idea what i'm doing in javascript as i've never used it before but i was able to understand enough to recognize certain elements and find out what they can do

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Roberto's Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Roberto Vazquez</h1>
         <p>Hello to all! This website is intended for Handmade Web 2024.</p>
-        <ul>
-            <li><a href="passion/index.html">passion part 1</a></li>
-            <li><a href="first-website/index.html">first website :D</a></li>
-        </ul>
+        <a class="button1" href=passion/index.html>PASSION!</a>
+        <a class="button2" href=first-website/index.html>FIRST WEBSITE!</a>
+        <a class="button3" href=positiontest.html>JAVASCRIPT MESSING AROUND!</a>
     </body>
 </html>
