--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Roberto's Page</title>
+        <link rel="icon" type="image/png" href="fav.png">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
