--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a class="button1" href=passion/index.html>PASSION!</a>
         <a class="button2" href=first-website/index.html>FIRST WEBSITE!</a>
         <a class="button3" href=positiontest.html>JAVASCRIPT MESSING AROUND!</a>
+        <a class="button5" href=passion2/index.html>PASSION 2!</a>
         <br>
         <button type="button" class="button4" onClick="onClick()">I've been clicked <a id="clicks">0</a> times! :D</button>
     </body>
