--- a/passion2/index.html
+++ b/passion2/index.html
@@ -14,6 +14,7 @@
                 <h3>by DJAPPLBTTMSMTH</h3>
                 <p>In 2019, life was good. Pandemic was a word some people haven't heard in decades, and people lived in ignorant bliss. It was during this time that young DJ John Apple Bottom Smith (stage name DJAPPLBTTMSMTH) emerged, making a name for himself and paving the way for hundreds of mainstream creatives today. This website is dedicated to the greatness of his first and most likely only album to ever exist, STREET STRUGGLES.</p>
                 <img class="doof" src="doofblue.gif">
+                <img class="doof2" src="doof2.gif">
             </div>
             <div class="audio-player">
                 <element id="music">
