--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <a class="button3" href=positiontest.html>JAVASCRIPT MESSING AROUND!</a>
         <a class="button5" href=passion2/index.html>PASSION 2!</a>
         <a class="button6" href=structure/index.html>STRUCTURE!</a>
+        <a class="button7" href=screensaver/index.html>SCREENSAVER!</a>
+        <a class="button8" href=accordian/index.html>ACCORDIAN!</a>
         <br>
         <button type="button" class="button4" onClick="onClick()">I've been clicked <a id="clicks">0</a> times! :D</button>
     </body>
