--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a class="button6" href=structure/index.html>STRUCTURE!</a>
         <a class="button7" href=screensaver/index.html>SCREENSAVER!</a>
         <a class="button8" href=accordian/index.html>ACCORDIAN!</a>
+        <a class="button9" href=control/index.html>CONTROL!</a>
         <br>
         <button type="button" class="button4" onClick="onClick()">I've been clicked <a id="clicks">0</a> times! :D</button>
     </body>
