--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a class="button7" href=screensaver/index.html>SCREENSAVER!</a>
         <a class="button8" href=accordian/index.html>ACCORDIAN!</a>
         <a class="button9" href=control/index.html>CONTROL!</a>
+        <a class="button10" href=https://twothousandrecords.net>FINAL!!!</a>
         <br>
         <button type="button" class="button4" onClick="onClick()">I've been clicked <a id="clicks">0</a> times! :D</button>
     </body>
